--- a/DtxCaseMgntSpring/src/main/resources/application.properties
+++ b/DtxCaseMgntSpring/src/main/resources/application.properties
@@ -1,1 +1,13 @@
-spring.application.name=spring
+spring.application.name=DtxCaseMgntSpring
+
+spring.datasource.url=jdbc:mysql://localhost:3306/dtxcasemgntspring?useUnicode=true&characterEncoding=utf8
+spring.datasource.username=root
+spring.datasource.password=P@ssw0rd
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate 配置
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+# 
+spring.freemarker.check-template-location=false
